[gd_scene load_steps=7 format=3 uid="uid://0p83shshedi4"]

[ext_resource type="Script" uid="uid://dqefh17q23qyw" path="res://main_scene.gd" id="1_0f027"]
[ext_resource type="Texture2D" uid="uid://cfjjvtfujyb4p" path="res://assets/point.png" id="2_2c62f"]

[sub_resource type="Animation" id="Animation_2c62f"]
resource_name = "bounce"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(0, 0, 0),
"update": 0,
"values": [Vector2(3.5, 3.5), Vector2(3.5, 3.5), Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_gyfs4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5x1h"]
_data = {
&"RESET": SubResource("Animation_gyfs4"),
&"bounce": SubResource("Animation_2c62f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c62f"]
size = Vector2(74, 60)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_0f027")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Shape" type="Area2D" parent="UI"]
position = Vector2(0, 35)

[node name="Shape2D" type="Sprite2D" parent="UI/Shape"]
position = Vector2(255, 365)
scale = Vector2(3, 3)
texture = ExtResource("2_2c62f")

[node name="BounceAnimationPlayer" type="AnimationPlayer" parent="UI/Shape/Shape2D"]
libraries = {
&"": SubResource("AnimationLibrary_d5x1h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Shape"]
position = Vector2(255, 365)
shape = SubResource("RectangleShape2D_2c62f")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PointsLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Points: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalClickLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Total Click: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickPowerLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Click Power: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 5
columns = 2

[node name="UpgradeButton" type="Button" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Upgrade Shape"

[node name="UpgradeCostLabel" type="Label" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Upgrade Cost: 0"

[node name="PowerUpButton" type="Button" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Buy Power Up"

[node name="PowerUpCostLabel" type="Label" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Power Up Cost: 0"

[node name="AutoClickButton" type="Button" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Buy Auto Click"

[node name="AutoClickCostLabel" type="Label" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Auto Click Cost: 0"

[node name="ActivateBoost" type="Button" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Activate Boost"

[node name="BoostCostLabel" type="Label" parent="UI/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Boost Cost: 0"

[node name="DetailLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AutoClickTimer" type="Timer" parent="."]
autostart = true

[node name="BoosterTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="input_event" from="UI/Shape" to="." method="_on_shape_input_event"]
[connection signal="pressed" from="UI/VBoxContainer/GridContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/GridContainer/PowerUpButton" to="." method="_on_power_up_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/GridContainer/AutoClickButton" to="." method="_on_auto_click_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/GridContainer/ActivateBoost" to="." method="_on_activate_boost_pressed"]
[connection signal="timeout" from="AutoClickTimer" to="." method="_on_auto_click_timer_timeout"]
[connection signal="timeout" from="BoosterTimer" to="." method="_on_booster_timer_timeout"]
